# CEP

./: .gitignore  .gitmodules  CEP.sh  CHANGELOG.CEP.md  LICENSE  LICENSE.Components.md  LICENSE.md  README.md  RELEASE_NOTES.md  build.sbt.nonasic  cep_sort.f  citation.cff  common.mk  get_external_dependencies.sh  gitSubmoduleExport.csv  licenseLog.txt  variables.mk
cosim/: .gitignore  CEP_sim_env.pptx  Makefile  README.md  cadence.make  cadenceExclude.vRefine  cadence_cov.ccf  cep_buildChips.make  cep_buildSW.make  common.make  compile_simlib.do  sahandler.c
doc/: cep_logo.txt
fpga/: .gitignore  Makefile  program_arty100t_flash.sh  program_arty100t_flash.tcl  program_arty100t_jtag.sh  program_arty100t_jtag.tcl  program_vc707_flash.sh  program_vc707_flash.tcl  program_vc707_jtag.sh  program_vc707_jtag.tcl  program_vcu118_flash.sh  program_vcu118_flash.tcl  program_vcu118_jtag.sh  program_vcu118_jtag.tcl
fpga_hardware/: Makefile  README.md  a2.mpf  mpf2prj.sh  runVSIM.sh
scripts/: centos-req.sh  init-submodules-no-riscv-tools-nolog.sh  manage-export.py  manage-submodules.py  sort-blackbox.py  ubuntu-req.sh
simulation/: .gitignore  run_regression.sh  run_sim.do  run_sim_CEP.do  run_sim_aes_axi4lite.do  run_sim_des3_axi4lite.do  run_sim_dft_axi4lite.do  run_sim_fir_axi4lite.do  run_sim_gps_axi4lite.do  run_sim_idft_axi4lite.do  run_sim_iir_axi4lite.do  run_sim_md5_axi4lite.do  run_sim_rsa_axi4lite.do  run_sim_sha256_axi4lite.do  (+11 more)
software/linux/gpiotest/: CMakeLists.txt  Config.in  gpiotest.c  gpiotest.mk
software/linux/helloworld/: CMakeLists.txt  Config.in  helloworld.c  helloworld.mk
(+1510 files in other folders)
